Perbarui all file fix

--- a/css/style.css
+++ b/css/style.css
@@ -73,20 +73,6 @@ body {
     transition: 0.2s linear;
 }
 
-.navbar .navbar-extra a {
-    color: #fff;
-    margin: 0 0.5rem;
-}
-
-.navbar .navbar-extra a:hover {
-    color: var(--primary);
-}
-
-#hamburger-menu {
-    display: none;
-}
-
-
 /* Desktop */
 @media(max-width: 1366px) {
     html {
@@ -100,7 +86,7 @@ body {
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background-image: url('../img/bg.jpg');
+    background-image: url('../../images/bg.jpg');
     background-size: 100%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -302,37 +288,8 @@ footer .credit a {
         font-size: 55%;
     }
 
-    #hamburger-menu {
-        display: inline-block;
-    }
-
     .navbar .navbar-nav {
-        position: absolute;
-        top: 100%;
-        right: -100%;
-        background-color: #fff;
-        width: 30rem;
-        height: 100vh;
-        transition: 0.3s;
-    }
-
-    .navbar .navbar-nav.active{
-        right: 0;
-    }
-
-    .navbar .navbar-nav a {
-        color: var(--bg);
-        display: block;
-        margin: 1.5rem;
-        padding: 0.5rem;
-        font-size: 2rem;
-    }
-
-    .navbar .navbar-nav a::after {
-        transform-origin: 0 0;
-    }
-
-    .navbar .navbar-nav a:hover::after {
-        transform: scaleX(0.2);
+        display: flex;
+        flex-direction: column;
     }
 }
